--- a/cart.html
+++ b/cart.html
@@ -344,79 +344,141 @@
             <div class="container">
                 <div class="title">
                     <h4>What would you like to do next?</h4>
-                    <p>Choose if you have a discount code or reward points you want to use or would like to estimate your delivery cost.</p>
+                    <p class="text-muted">Choose if you have a discount code or reward points you want to use or would like to estimate your delivery cost.</p>
                 </div>
                 <div class="row">
                     <div class="col-lg-8 col-12">
                         <div class="accordion">
-                            <div class="devices_info">
+                            <div class="devices_info my-2">
                               <div class="cart_info_faq_title" >
                               <h5>Use Coupon Code</h5>
                               <i class="bi bi-caret-down-fill me-3"></i>
                             </div>
-                            <div class="cart_info_ ">
-                              <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-                                natus? Excepturi accusantium, rerum incidunt temporibus iure alias
-                                tempora quisquam odio eius. Ipsam repellat iure accusamus error
-                                dolorum esse, vel sunt.
-                              </p>
+                            <div class="cart_info_  ">
+                                <div class="title">
+                                    <h6>Enter your coupon here</h6>
+                                </div>
+                             <div class="inputs d-flex">
+                                <input type="text" placeholder="Enter your coupon here"  >
+                                <button >Apply Coupon</button>
+                             </div>
                             </div>
                             </div>
-                            <div class="devices_info">
+                            <div class="devices_info my-2">
                               <div class="cart_info_faq_title">
                               <h5>Estimate Shipping & Taxes</h5>
                               <i class="bi bi-caret-down-fill me-3"></i>
                             </div>
                   
                             <div class="cart_info_" >
-                              <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-                                natus? Excepturi accusantium, rerum incidunt temporibus iure alias
-                                tempora quisquam odio eius. Ipsam repellat iure accusamus error
-                                dolorum esse, vel sunt.
-                              </p>
+                                <div class="text">
+                                    <h6 class="text-muted">Enter your destination to get a shipping estimate.</h6>
+                                </div>
+                                <div class="first my-2">
+                                    <div class="title my-3">
+                                        <div class="import"><strong style="color: red;">*</strong><small>Country</small></div>
+                                    </div>
+                                 <div class="selection">
+                                    <select >
+                                        <option selected>United Kingdom</option>
+                                        <option value="1">Switzerland</option>
+                                        <option value="2">Taiwan</option>
+                                        <option value="3">Tajikistan</option>
+                                        <option value="4">Tanzania,United Republic of</option>
+                                        <option value="5">Thailand</option>
+                                        <option value="6">Togo</option>
+                                        <option value="7">Tokelau</option>
+                                        <option value="8">Tonga</option>
+                                        <option value="9">Trinidad and Tobaga</option>
+                                        <option value="10">Tristan da Cunha</option>
+                                        <option value="11">Tunisia</option>
+                                        <option value="12">Turkey</option>
+                                      </select>
+                                 </div>
+                                </div>
+                                <div class="second my-2">
+                                    <div class="title my-3">
+                                        <div class="import"><strong style="color: red;">*</strong><small>Region / State</small></div>
+                                    </div>
+                                 <div class="selection">
+                                    <select class="w-100">
+                                        <option selected=>---Please Select---</option>
+                                        <option value="1">Aberdeen </option>
+                                        <option value="2">Aberdeenshire</option>
+                                        <option value="3">Anglesey</option>
+                                        <option value="4">Angus</option>
+                                        <option value="5">Argyil and Bute</option>
+                                        <option value="6">Bekshire</option>
+                                        <option value="7">Bristol</option>
+                                        <option value="8">Buckinghamshire</option>
+                                        <option value="9">Caerphilly</option>
+                                        <option value="10">Cardiff</option>
+                                        <option value="11">Cheshire</option>
+                                        <option value="12">Canwy</option>
+                                      </select>
+                                 </div>
+                                </div>
+                                <div class="third my-2">
+                                    <div class="title my-3">
+                                        <div class="import"><strong style="color: red;">*</strong><small>Post Code</small></div>
+                                    </div>
+                                 <div class="inputs">
+                                    <input class="w-100" type="text">
+                                 </div>
+                                </div>
+                                <div class="buttons mt-5" >
+                                    <button>Get Quetos</button>
+                                  </div>
                             </div>
                             </div>
-                            <div class="devices_info ">
+                            <div class="devices_info my-2 ">
                               <div class="cart_info_faq_title">
                               <h5>Use Gift Certificate</h5>
                               <i class="bi bi-caret-down-fill me-3"></i>
                             </div> 
                             <div class="cart_info_" >
-                                <p>
-                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-                                  natus? Excepturi accusantium, rerum incidunt temporibus iure alias
-                                  tempora quisquam odio eius. Ipsam repellat iure accusamus error
-                                  dolorum esse, vel sunt.
-                                </p>
+                                <div class="title">
+                                    <h6>Enter your gift certificate code here
+                                    </h6>
+                                </div>
+                             <div class="inputs d-flex">
+                                <input type="text" placeholder="Enter your gift certificate code here
+                                "  >
+                                <button>Apply Certificate</button>
+                             </div>
                               </div>
                            </div>
-                          </div>
+                         </div>
+                      
                     </div>
                     <div class="col-lg-4 col-12">
                         <div class="cart-bottom">
                             <ul>
                               <li>
-                                <span>Sub-Total</span>
-                                <span>$<span>0</span></span>
+                                <span>Sub-Total</span>                           
                               </li>
                               <li>
                                 <span>Eco Tax (-2)</span>
-                                <span>$<span>0</span></span>
                               </li>
                               <li>
-                                <span>VAT (20%)</span>
-                                <span>$<span>0</span></span>
+                                <span>VAT (20%)</span>   
                               </li>
                               <li>
                                 <span>Total</span>
-                                <span>$<span>0</span></span>
                               </li>
                             </ul>
-                            <div class="buttons" >
-                              <button>CHECKOUT</button>
-                            </div>
+                            <ul>
+                                <li><span>$<span>0</span></span></li>
+                                <li><span>$<span>0</span></span></li>
+                                <li><span>$<span>0</span></span></li>
+                                <li><span>$<span>0</span></span></li>
+                            </ul>
+                          </div>
+                    </div>
+                    <div class="col-lg-12 ">
+                        <div class="buttons " >
+                            <button class="first_btn">CONTINUE SHOPPING</button>
+                            <button class="second_btn">CHECKOUT</button>    
                           </div>
                     </div>
               </div>
