changed creat main scss

--- a/cart.html
+++ b/cart.html
@@ -14,7 +14,7 @@
         <link href="https://demo.ishithemes.com/opencart/OPC100/OPC100L02/image/catalog/cart.png" rel="icon">
         <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
         <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
-        <link rel="stylesheet" href="./assets/css/cart.css">
+        <link rel="stylesheet" href="./assets/css/main.css">
         <title>cart</title>
     </head>
 <body>
