--- a/registration.html
+++ b/registration.html
@@ -15,7 +15,7 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="./assets/css/registr.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <title>Registration</title>
 </head>
 <body>
@@ -306,8 +306,8 @@
                 <div class="clipboard_background">
                     <ul class="d-flex justify-content-center align-items-center list-unstyled">
                         <li><a class=" text-decoration-none" href="./index.html"><i class="bi bi-house-fill"></i></a></li>
-                        <li><a class=" text-decoration-none" href="">Account</a></li>
-                        <li><a class=" text-decoration-none" href="./login.html">Login</a></li>
+                        <li><a class=" text-decoration-none" href="">Collection</a></li>
+                        
                     </ul>
                 </div>
             </div>
