--- a/collections.html
+++ b/collections.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="./assets/bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <link href="https://demo.ishithemes.com/opencart/OPC100/OPC100L02/image/catalog/cart.png" rel="icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="./assets/css/main.css">
-    <title>login</title>
-</head>
-
+        <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+        <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
+        <link rel="stylesheet" href="./assets/css/main.css">
+        <title>Colection</title>
+    </head>
 <body>
     <header id="head">
         <div class="container-fluid  big-size-container justify-content-between align-items-center d-lg-block d-none">
@@ -314,40 +311,13 @@
                 </div>
             </div>
         </section>
-        <section id="login">
+        <section id="collect">
             <div class="container">
-                <div class="row justify-content-end gy-4">
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="registr">
-                            <span >New Customer</span>
-                            <span >Register Account</span>
-                            <p>By creating an account you will be able to shop faster, be up to date on an order's
-                                status, and keep track of the orders you have previously made.</p>
-                            <a href="./registration.html"><div class="reg_btn btn btn-primary">Continue</div></a>
-                        </div>
+                <div class="row">
+                    <div class="col-lg-3">
+
                     </div>
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="login">
-                            <div class="text">
-                                <p>Returning Customer</p>
-                                <p>I am a returning customer</p>
-                            </div>
-                            <div class="inputs">
-                                <div class="email">
-                                    <label for="email">E-Mail Address</label><br>
-                                    <input type="email" name="" id="email" placeholder="E-Mail Adress">
-                                </div>
-                                <div class="password">
-                                    <label for="password" >Password</label><br>
-                                    <input type="password" name="" id="password" placeholder="Password">
-                                </div>
-                            </div>
-                            <div class="pass">
-                                <span><a href="">Forgotten Password</a></span>
-                                <div class="login_button btn btn-primary">LOGIN</div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="col-lg-9"></div>
                 </div>
             </div>
         </section>
@@ -501,9 +471,8 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
-        integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    <script src="./assets/script/owl.carousel.min.js"></script>
-    <script src="./assets/js/script.js"></script>
+    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+<script src="./assets/script/owl.carousel.min.js"></script>
+<script src="./assets/js/script.js"></script>
 </body>
-
 </html>
