--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://demo.ishithemes.com/opencart/OPC100/OPC100L02/image/catalog/cart.png" rel="icon">
     <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <title>fabolous</title>
 </head>
 <body>
@@ -608,7 +608,7 @@
                               HTC Touch HD</p>
                         </div>
                         <div class="price">
-                            <p >
+                            <p class="prices">
                                 95.72€
                               </p>
                         </div>
@@ -720,7 +720,7 @@
                               ipod Shuffle</p>
                         </div>
                         <div class="price">
-                            <p >
+                            <p class="prices">
                                 95.72€
                               </p>
                         </div>
@@ -775,7 +775,7 @@
                             HP LP3065</p>
                       </div>
                       <div class="price">
-                          <p >
+                          <p class="prices">
                               95.72€
                             </p>
                       </div>
@@ -832,10 +832,7 @@
                               iMAC</p>
                         </div>
                         <div class="price">
-                            <p >
-                                <del style="color: gray;">95.72€</del>
-                                39.23€
-                              </p>
+                            <span style="color: gray;">95.72€</span><span  class="prices">39.21€</span>
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -888,9 +885,9 @@
                             iPod</p>
                       </div>
                       <div class="price">
-                          <p >
-                              <del style="color: gray;">95.72€</del>29.81€
-                            </p>
+                        
+                              <span style="color: gray;">95.72€</span><span  class="prices">29.81€</span>
+                        
                       </div>
                       <div class="add_cart">
                           Add To Cart
@@ -945,9 +942,7 @@
                                Apple Cinema 30</p>
                         </div>
                         <div class="price">
-                            <p >
-                               <del style="color: gray;"> 95.72€</del> 29.78€
-                              </p>
+                            <span style="color: gray;">95.72€</span><span  class="prices">39.81€</span>
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -1000,9 +995,7 @@
                              Apple Cinema 30</p>
                       </div>
                       <div class="price">
-                        <p >
-                            <del style="color: gray;"> 95.72€</del> 39.88€
-                           </p>
+                        <span style="color: gray;">95.72€</span><span  class="prices">29.81€</span>
                       </div>
                       <div class="add_cart">
                           Add To Cart
@@ -1064,7 +1057,7 @@
                                 iPod Nano</p>
                           </div>
                           <div class="price">
-                              <p >
+                              <p class="prices">
                                   95.72€
                                 </p>
                           </div>
@@ -1119,7 +1112,7 @@
                               HTC Touch HD</p>
                         </div>
                         <div class="price">
-                            <p >
+                            <p class="prices">
                                 95.72€
                               </p>
                         </div>
@@ -1176,7 +1169,7 @@
                                 Ipod Shuffle</p>
                           </div>
                           <div class="price">
-                              <p >
+                              <p class="prices">
                                   95.72€
                                 </p>
                           </div>
@@ -1231,7 +1224,7 @@
                               Hp LP3065</p>
                         </div>
                         <div class="price">
-                            <p >
+                            <p class="prices">
                                 95.72€
                               </p>
                         </div>
@@ -1288,7 +1281,7 @@
                                  Apple Cinema 30</p>
                           </div>
                           <div class="price">
-                              <p >
+                              <p class="prices">
                                   95.72€
                                 </p>
                           </div>
@@ -1343,7 +1336,7 @@
                                Apple Cinema 30</p>
                         </div>
                         <div class="price">
-                            <p >
+                            <p class="prices">
                                 95.72€
                               </p>
                         </div>
@@ -1400,7 +1393,7 @@
                                  Apple Cinema 30</p>
                           </div>
                           <div class="price">
-                              <p >
+                              <p class="prices">
                                   95.72€
                                 </p>
                           </div>
@@ -1455,7 +1448,7 @@
                                Apple Cinema 30</p>
                         </div>
                         <div class="price">
-                            <p >
+                            <p class="prices">
                                 95.72€
                               </p>
                         </div>
@@ -1512,7 +1505,7 @@
                                  Sony Vaio</p>
                           </div>
                           <div class="price">
-                              <p >
+                              <p class="prices">
                                   943.72€
                                 </p>
                           </div>
@@ -1567,7 +1560,7 @@
                                Samsung SyncMaster 941BW</p>
                         </div>
                         <div class="price">
-                            <p >
+                            <p class="prices">
                                 95.72€
                               </p>
                         </div>
@@ -1624,7 +1617,7 @@
                                  Apple Cinema 30</p>
                           </div>
                           <div class="price">
-                              <p >
+                              <p class="prices">
                                   95.72€
                                 </p>
                           </div>
@@ -1679,7 +1672,7 @@
                                Apple Cinema 30</p>
                         </div>
                         <div class="price">
-                            <p >
+                            <p class="prices">
                                 95.72€
                               </p>
                         </div>
@@ -1738,7 +1731,7 @@
                                  Canon EOS 5D</p>
                           </div>
                           <div class="price">
-                              <p >
+                              <p class="prices">
                                   95.72€
                                 </p>
                           </div>
@@ -1793,9 +1786,7 @@
                                Imac</p>
                         </div>
                         <div class="price">
-                            <p >
-                               <del style="color: gray;"> 95.72€</del>39.23€
-                              </p>
+                            <span style="color: gray;">95.72€</span><span  class="prices">39.81€</span>
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -1850,9 +1841,7 @@
                                 Vivo 8pro</p>
                           </div>
                           <div class="price">
-                              <p >
-                                 <del style="color: gray;"> 95.72€</del>20.40€
-                                </p>
+                            <span style="color: gray;">95.72€</span><span  class="prices">19.81€</span>
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -1905,9 +1894,7 @@
                                ipod Touch</p>
                         </div>
                         <div class="price">
-                            <p >
-                               <del style="color: gray;"> 95.72€</del>29.81€
-                              </p>
+                            <span style="color: gray;">95.72€</span><span  class="prices">29.81€</span>
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -1962,7 +1949,7 @@
                                  Sony Vaio</p>
                           </div>
                           <div class="price">
-                              <p >
+                              <p class="prices">
                                   943.72€
                                 </p>
                           </div>
@@ -2017,7 +2004,7 @@
                                Samsung SyncMaster 941BW</p>
                         </div>
                         <div class="price">
-                            <p >
+                            <p class="prices">
                                 95.72€
                               </p>
                         </div>
@@ -2074,7 +2061,7 @@
                                  Apple Cinema 30</p>
                           </div>
                           <div class="price">
-                              <p >
+                              <p class="prices">
                                   95.72€
                                 </p>
                           </div>
@@ -2129,7 +2116,7 @@
                                Apple Cinema 30</p>
                         </div>
                         <div class="price">
-                            <p >
+                            <p class="prices">
                                 95.72€
                               </p>
                         </div>
@@ -2186,7 +2173,7 @@
                                 iPod Nano</p>
                           </div>
                           <div class="price">
-                              <p >
+                              <p  class="prices">
                                   95.72€
                                 </p>
                           </div>
@@ -2241,7 +2228,7 @@
                               HTC Touch HD</p>
                         </div>
                         <div class="price">
-                            <p >
+                            <p class="prices">
                                 95.72€
                               </p>
                         </div>
@@ -2298,7 +2285,7 @@
                                 Ipod Shuffle</p>
                           </div>
                           <div class="price">
-                              <p >
+                              <p class="prices">
                                   95.72€
                                 </p>
                           </div>
@@ -2353,7 +2340,7 @@
                               Hp LP3065</p>
                         </div>
                         <div class="price">
-                            <p >
+                            <p class="prices">
                                 95.72€
                               </p>
                         </div>
