--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 </div>
                             
                                 </li>
-                            <li><a class="li_a text-decoration-none" href="">Collection</a></li>
+                            <li><a class="li_a text-decoration-none" href="./collections.html">Collection</a></li>
                             <li><a class="li_a text-decoration-none" href="">Components</a></li>
                             <li><a class="li_a text-decoration-none" href="">Outfits</a></li>
                         </ul>
