collections localstroga done

--- a/collections.html
+++ b/collections.html
@@ -523,7 +523,46 @@
                         </div>
                     </div>
                     <div class="col-lg-9">
-                     <div class="container">
+                        <div class="col-lg-12 mb-5">
+                            <div class="row layout">
+                                <div class="icons col-md-6 d-flex">
+                                    <div class="gridList">
+                                        <i class="grid fa-solid fa-grip-vertical "></i>
+                                    </div>
+                                    <div class="gridList">
+                                        <i class="list fa-solid fa-list-ul"></i>
+                                    </div>
+                                    <p><a href="">Product Compare (0)</a></p>
+                                </div>
+                                <div class="sort_show col-md-6 d-md-flex">
+                                    <div>
+                                        <label>Sort By:</label>
+                                        <select name="" id="">
+                                            <option value="">Default</option>
+                                            <option value="">Name (A - Z)</option>
+                                            <option value="">Name (Z - A)</option>
+                                            <option value="">Price (Low > High)</option>
+                                            <option value="">Price (High > Low)</option>
+                                            <option value="">Rating (Highest)</option>
+                                            <option value="">Rating (Lowest)</option>
+                                            <option value="">Model (A - Z)</option>
+                                            <option value="">Model (Z - A)</option>
+                                        </select>
+                                    </div>
+                                    <div>
+                                        <label>Show:</label>
+                                        <select name="" id="">
+                                            <option value="">15</option>
+                                            <option value="">25</option>
+                                            <option value="">50</option>
+                                            <option value="">75</option>
+                                            <option value="">100</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                     <div class="container first_page">
                         <div class="row">
                             <div class="right col-lg-4">
                                 <div class="device" data-id="7">
@@ -697,7 +736,126 @@
                          </div>
                    </div>
                      </div>
-                 </div>
+                      </div>
+                      <div class="container second_page">
+                        <div class="row">
+                            <div class="devices">
+                                <div class="device col-md-12 d-md-flex" data-id="25">
+                                    <div class="device_icons">
+                                        <div class="eye animate__animated">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="heart animate__animated">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="rating animate__animated ">
+                                            <i class="fa-solid fa-chart-simple"></i>
+                                        </div>
+                                    </div>
+                                    <div class="image col-md-6">
+                                        <img class="first" src="./assets/images/16-370x370 (1).jpg" alt="">
+                                        <img class="second" src="./assets/images/18-370x370.jpg" alt="">
+                                    </div>
+                                    <div class="icons">
+                                        <i class="bi bi-star yellow"></i>
+                                        <i class="bi bi-star "></i>
+                                        <i class="bi bi-star "></i>
+                                        <i class="bi bi-star "></i>
+                                        <i class="bi bi-star "></i>
+                                    </div>
+                                    <div class="description">
+                                        <h5 class="title">Ipod Pro</h5>
+                                        <p class="about">
+                                            The 40-inch Apple Cinema HD Display delivers an amazing 2560 x 1600 pixel
+                                            resolution. Designed speci..
+                                        </p>
+                                        <div class="price">
+                                            <p class="notPrice"><del>$122.00 </del></p>
+                                            <p class="prices">$50.00</p>
+                                        </div>
+                                        <div class="add_cart">
+                                            <p>ADD TO CART</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="device col-md-12 d-md-flex"data-id="26">
+                                    <div class="device_icons">
+                                        <div class="eye animate__animated">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="heart animate__animated">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="rating animate__animated ">
+                                            <i class="fa-solid fa-chart-simple"></i>
+                                        </div>
+                                    </div>
+                                    <div class="image col-md-6">
+                                        <img class="first" src="./assets/images/18-370x370.jpg" alt="">
+                                        <img class="second" src="./assets/images/16-370x370 (1).jpg" alt="">
+                                    </div>
+                                    <div class="icons">
+                                        <i class="bi bi-star yellow"></i>
+                                        <i class="bi bi-star yellow"></i>
+                                        <i class="bi bi-star yellow"></i>
+                                        <i class="bi bi-star "></i>
+                                        <i class="bi bi-star "></i>
+                                    </div>
+                                    <div class="description">
+                                        <h5 class="title">Xiaomi one8</h5>
+                                        <p class="about">
+                                            The 30-inch Apple Cinema HD Display delivers an amazing 2560 x 1600 pixel
+                                            resolution. Designed speci..
+                                        </p>
+                                        <div class="price">
+                                            <p  class="prices">$330.00</p>
+                                        </div>
+                                        <div class=" add_cart">
+                                            <p>ADD TO CART</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="device col-md-12 d-md-flex"data-id="27">
+                                    <div class="device_icons">
+                                        <div class="eye animate__animated">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="heart animate__animated">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="rating animate__animated ">
+                                            <i class="fa-solid fa-chart-simple"></i>
+                                        </div>
+                                    </div>
+                                    <div class="image col-md-6">
+                                        <img class="first" src="./assets/images/16-370x370 (1).jpg" alt="">
+                                        <img class="second" src="./assets/images/10-370x370.jpg" alt="">
+                                    </div>
+                                    <div class="icons">
+                                        <i class="bi bi-star yellow"></i>
+                                        <i class="bi bi-star yellow"></i>
+                                        <i class="bi bi-star yellow"></i>
+                                        <i class="bi bi-star "></i>
+                                        <i class="bi bi-star "></i>
+                                    </div>
+                                    <div class="description">
+                                        <h5 class="title">Vivo 8pro</h5>
+                                        <p class="about">
+                                            The 30-inch Apple Cinema HD Display delivers an amazing 2560 x 1600 pixel
+                                            resolution. Designed speci..
+                                        </p>
+                                        <div class="price">
+                                            <p class="notPrice"><del>$122.00 </del></p>
+                                            <p class="prices">$50.00</p>
+                                        </div>
+                                        <div class="add_cart">
+                                            <p>ADD TO CART</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
                 </div>
             </div>
         </section>
