header add link all page

--- a/collections.html
+++ b/collections.html
@@ -342,7 +342,7 @@
                         <li  class=" d-flex justify-content-between"><a class="text-decoration-none me-2" href=""> Snaptain Sp500</a> <i class="first fas fa-chevron-down"></i></li>
                     </ul>
                 </div>
-                <li><a class="text-decoration-none" href="">Collection</a></li>
+                <li><a class="text-decoration-none" href="./collections.html">Collection</a></li>
                 <li><a class="text-decoration-none" href="">Components</a></li>
                 <li><a class="text-decoration-none" href="">Outfits</a></li>
             </ul>
@@ -363,7 +363,7 @@
         <section id="collection">
             <div class="container">
                 <div class="row gy-3">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-md-3 col-sm-3">
                         <div class="left">
                             <div class="collection_ctgr">
                                 <h5>Catogories</h5>
@@ -522,14 +522,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-9">
+                    <div class="col-lg-9 col-md-9 col-sm-9">
                         <div class="col-lg-12 mb-5">
                             <div class="row layout">
                                 <div class="icons col-md-6 d-flex">
-                                    <div class="gridList">
-                                        <i class="grid fa-solid fa-grip-vertical "></i>
+                                    <div class="grid">
+                                        <i class="grid_grip fa-solid fa-grip-vertical "></i>
                                     </div>
-                                    <div class="gridList">
+                                    <div class="grid">
                                         <i class="list fa-solid fa-list-ul"></i>
                                     </div>
                                     <p><a href="">Product Compare (0)</a></p>
