--- a/registration.html
+++ b/registration.html
@@ -343,7 +343,7 @@
                         <li  class=" d-flex justify-content-between"><a class="text-decoration-none me-2" href=""> Snaptain Sp500</a> <i class="first fas fa-chevron-down"></i></li>
                     </ul>
                 </div>
-                <li><a class="text-decoration-none" href="">Collection</a></li>
+                <li><a class="text-decoration-none" href="./collections.html">Collection</a></li>
                 <li><a class="text-decoration-none" href="">Components</a></li>
                 <li><a class="text-decoration-none" href="">Outfits</a></li>
             </ul>
