--- a/registration.html
+++ b/registration.html
@@ -355,7 +355,8 @@
                 <div class="clipboard_background">
                     <ul class="d-flex justify-content-center align-items-center list-unstyled">
                         <li><a class=" text-decoration-none" href="./index.html"><i class="bi bi-house-fill"></i></a></li>
-                        <li><a class=" text-decoration-none" href="">Collection</a></li>
+                        <li><a class=" text-decoration-none" href="">Account</a></li>
+                        <li><a class=" text-decoration-none" href="">Register</a></li>
                         
                     </ul>
                 </div>
