index.html except header part has been changed

--- a/login.html
+++ b/login.html
@@ -34,8 +34,8 @@
                 </div>
                 <div class="col-lg-7 ">
                     <nav class="mt-3">
-                        <ul class="list-unstyled d-flex justify-content-center align-items-center">
-                            <li class="drone"><a class="li_a text-decoration-none" href="">Drone</a>
+                        <ul class=" list-unstyled d-flex justify-content-center align-items-center">
+                            <li class="drone text-dark"><a class="text-dark li_a text-decoration-none" href="">Drone</a>
                                 <div class="drone-menu d-flex">
                                     <div class="indoor menu p-3 ">
                                         <h5 class="text-center ">Indoor Toy <hr></h5>
@@ -66,12 +66,12 @@
                                 </div>
                                
                             </li>
-                            <li  class="accesories"><a class="li_a text-decoration-none" href="">Accesories</a>
+                            <li  class="accesories text-dark"><a class="text-dark li_a text-decoration-none" href="">Accesories</a>
                                 <div class="accesories-menu  d-flex">
                                     <div class="indoor menu p-3">
                                         <h5 class="text-center">Ryze Tello <hr></h5>
                                         <ul class="list-unstyled accesories_menu_ul p-3">
-                                            <li>PowerVision</li>
+                                            <li text-dark>PowerVision</li>
                                             <li>PowerVision Wizard</li>
                                             <li>Snaptain Sp500</li>
                                         </ul>
@@ -88,9 +88,9 @@
                                 </div>
                             
                                 </li>
-                            <li><a class="li_a text-decoration-none" href="./collections.html">Collection</a></li>
-                            <li><a class="li_a text-decoration-none" href="">Components</a></li>
-                            <li><a class="li_a text-decoration-none" href="">Outfits</a></li>
+                            <li class="text-dark"><a class="text-dark li_a text-decoration-none" href="./collections.html">Collection</a></li>
+                            <li class="text-dark"><a class="text-dark li_a text-decoration-none" href="">Components</a></li>
+                            <li class="text-dark"><a class="text-dark li_a text-decoration-none" href="">Outfits</a></li>
                         </ul>
                     </nav>
                 </div>
