htc page is 10% done page and slider

--- a/cart.html
+++ b/cart.html
@@ -93,9 +93,9 @@
                 </div>
                 <div class="col-lg-2">
                     <div class="icons">
-                        <i class="icon bi bi-search large_glass"></i>
-                        <i class="icon bi bi-person large_user"></i>
-                        <i class="icon bi bi-cart cart"></i>
+                        <i style="color: black;" class="icon bi bi-search large_glass"></i>
+                        <i style="color: black;" class="icon bi bi-person large_user"></i>
+                        <i style="color: black;" class="icon bi bi-cart cart"></i>
                         <div class="count"><sup  class="total_count">0</sup></div>
                         <div class="box">
                             <div class="cart-sticky">
