--- a/registration.html
+++ b/registration.html
@@ -33,7 +33,7 @@
                 <div class="col-lg-7 ">
                     <nav class="mt-3">
                         <ul class=" list-unstyled d-flex justify-content-center align-items-center">
-                            <li class="drone text-dark"><a class="text-dark li_a text-decoration-none" href="">Drone</a>
+                            <li  class="drone text-dark"><a class="text-dark li_a text-decoration-none" href="">Drone</a>
                                 <div class="drone-menu d-flex">
                                     <div class="indoor menu p-3 ">
                                         <h5 class="text-center ">Indoor Toy <hr></h5>
@@ -94,9 +94,9 @@
                 </div>
                 <div class="col-lg-2">
                     <div class="icons">
-                        <i class="icon bi bi-search large_glass"></i>
-                        <i class="icon bi bi-person large_user"></i>
-                        <i class="icon bi bi-cart cart"></i>
+                        <i style="color: black;" class="icon bi bi-search large_glass"></i>
+                        <i style="color: black;" class="icon bi bi-person large_user"></i>
+                        <i style="color: black;" class="icon bi bi-cart cart"></i>
                         <div class="count"><sup  class="total_count">0</sup></div>
                         <div class="box">
                             <div class="cart-sticky">
