htc half part is done

--- a/htcTouch.html
+++ b/htcTouch.html
@@ -453,29 +453,46 @@
                                         <p>Showing 1 to 1 of 1 (1 Pages)
                                         </p>
                                     </div>
-                                  <ul>
-                                      <li>Processor Qualcomm® MSM 7201A™ 528 MHz</li>
-                                      <li>Windows Mobile® 6.1 Professional Operating System</li>
-                                      <li>Memory: 512 MB ROM, 288 MB RAM</li>
-                                      <li>Dimensions: 115 mm x 62.8 mm x 12 mm / 146.4 grams</li>
-                                      <li>3.8-inch TFT-LCD flat touch-sensitive screen with 480 x 800 WVGA resolution</li>
-                                      <li>HSDPA/WCDMA: Europe/Asia: 900/2100 MHz; Up to 2 Mbps up-link and 7.2 Mbps down-link speeds</li>
-                                      <li>Quad-band GSM/GPRS/EDGE: Europe/Asia: 850/900/1800/1900 MHz (Band frequency, HSUPA availability, and data speed are operator dependent.)</li>
-                                      <li>Device Control via HTC TouchFLO™ 3D & Touch-sensitive front panel buttons</li>
-                                      <li>GPS and A-GPS ready</li>
-                                      <li>Bluetooth® 2.0 with Enhanced Data Rate and A2DP for wireless stereo headsets</li>
-                                      <li>Wi-Fi®: IEEE 802.11 b/g</li>
-                                      <li>HTC ExtUSB™ (11-pin mini-USB 2.0)</li>
-                                      <li>5 megapixel color camera with auto focus</li>
-                                      <li>VGA CMOS color camera</li>
-                                      <li>Built-in 3.5 mm audio jack, microphone, speaker, and FM radio</li>
-                                      <li>Ring tone formats: AAC, AAC+, eAAC+, AMR-NB, AMR-WB, QCP, MP3, WMA, WAV</li>
-                                      <li>40 polyphonic and standard MIDI format 0 and 1 (SMF)/SP MIDI</li>
-                                      <li>Rechargeable Lithium-ion or Lithium-ion polymer 1350 mAh battery</li>
-                                      <li>Expansion Slot: microSD™ memory card (SD 2.0 compatible)</li>
-                                      <li>AC Adapter Voltage range/frequency: 100 ~ 240V AC, 50/60 Hz DC output: 5V and 1A</li>
-                                      <li>Special Features: FM Radio, G-Sensor</li>
-                                  </ul>
+                                  <div class="inputs">
+                                    <div class="inputs_title">
+                                        <h5>Write a review</h5>
+                                    </div>
+                                    <div class="input">
+                                      <div class="input_title">
+                                        <p class="star">Your Name</p>
+                                      </div>
+                                      <input type="text" class="form-control" >
+                                    </div>
+                                    <div class="text_area">
+                                        <div class="input_title">
+                                            <p class="star">Your Review</p>
+                                         </div>
+                                         <textarea class="form-control"  style="height: 100px"></textarea>
+                                         <div class="text-start show">
+                                            <p>HTML is not translated!
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex">
+                                        <label class="control-label radio-title label">Rating</label>
+                                        <div class="form-radio">
+                                          <span>Bad</span>&nbsp;
+                                          <input type="radio" name="rating" value="1">
+                                          &nbsp;
+                                          <input type="radio" name="rating" value="2">
+                                          &nbsp;
+                                          <input type="radio" name="rating" value="3">
+                                          &nbsp;
+                                          <input type="radio" name="rating" value="4">
+                                          &nbsp;
+                                          <input type="radio" name="rating" value="5">
+                                          <span>Good</span>
+                                        </div>
+                                      </div>
+                                  </div>
+                                  <div class="buttons ">
+                                    <button><a class="text-white text-decoration-none" href="./cart.html">Continue</a></button>
+                                </div>
                                  </div>
                             </div>
                         </div>
