hover selectors is not work

--- a/login.html
+++ b/login.html
@@ -371,11 +371,11 @@
                 <div class="row justify-content-end gy-4">
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="registr">
-                            <span >New Customer</span>
-                            <span >Register Account</span>
+                            <strong >New Customer</strong>
+                            <strong >Register Account</strong>
                             <p>By creating an account you will be able to shop faster, be up to date on an order's
                                 status, and keep track of the orders you have previously made.</p>
-                            <a href="./registration.html"><div class="reg_btn btn btn-primary">Continue</div></a>
+                            <a href="./registration.html"><div class="reg_btn btn btn-danger">Continue</div></a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12">
