some changed and cursor pointer is not work

--- a/login.html
+++ b/login.html
@@ -375,7 +375,7 @@
                             <strong >Register Account</strong>
                             <p>By creating an account you will be able to shop faster, be up to date on an order's
                                 status, and keep track of the orders you have previously made.</p>
-                            <a href="./registration.html"><div class="reg_btn btn btn-danger">Continue</div></a>
+                            <a href="./registration.html"><div class="reg_btn_ btn btn-danger">Continue</div></a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12">
