--- a/htcTouch.html
+++ b/htcTouch.html
@@ -357,8 +357,8 @@
         <div class="col-12">
             <div class="clipboard_background">
                 <ul class="d-flex justify-content-center align-items-center list-unstyled">
-                    <li class="li"><a class=" text-decoration-none" href="./index.html"><i class="bi bi-house-fill"></i></a></li>
-                    <li class="li"><a class=" text-decoration-none" href="">HTC Touch HD</a></li>  
+                    <li ><a class=" text-decoration-none" href="./index.html"><i class="bi bi-house-fill"></i></a></li>
+                    <li ><a class=" text-decoration-none" href="">HTC Touch HD</a></li>  
                 </ul>
             </div>
         </div>
